# Cookie_game

./: CMakeLists.txt  README.md  attracting_element.cpp  attracting_element.h  main.cpp  player.cpp  player.h
allegro5/include/platform/: alplatf.h
allegro5/lib/: liballegro_acodec.so.5.2.6  liballegro_audio.so.5.2.6  liballegro_color.so.5.2.6  liballegro_dialog.so.5.2.6  liballegro_font.so.5.2.6  liballegro_image.so.5.2.6  liballegro_main.so.5.2.6  liballegro_memfile.so.5.2.6  liballegro_physfs.so.5.2.6  liballegro_primitives.so.5.2.6  liballegro_ttf.so.5.2.6  liballegro_video.so.5.2.6
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: private.xml
